# el-migrador

./: .gitignore  docker-compose.yaml
populate_new/: pyproject.toml
populate_new/populate_new/: dbconn.py  group_detection.py  migrate_detection.py  mongo_detection.py  mongo_object.py  mongo_writer.py  populate_db.py  sorting_hat.py  transform_detection.py  transform_non_detection.py  transform_object.py
populate_new/tests/: test_transform_detection.py  utils.py
populate_old/: entrypoint.sh  pyproject.toml
populate_old/populate_old/: dbconn.py  generate_detection.py  generate_non_detection.py  generate_object.py  populate_db.py
