[tool.poetry]
name = "populate-old"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "populate_old"}]

[tool.poetry.dependencies]
python = "^3.8"
db_plugins = { git = "https://github.com/alercebroker/db-plugins", tag = "2.1.3" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
